--- a/HYNewNest/Features(主代码)/HomeComponent/DashenBoardComponent/View/DSBProfitHeader.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/DashenBoardComponent/View/DSBProfitHeader.xib
@@ -23,22 +23,10 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="两房一厅" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ym0-63-EnZ">
-                            <rect key="frame" x="336" y="8" width="68" height="20"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="20" id="EsA-kP-eoU"/>
-                                <constraint firstAttribute="width" constant="68" id="Htm-FD-Bsw"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
                     <color key="backgroundColor" red="0.20784313725490194" green="0.20784313725490194" blue="0.35686274509803922" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="Ym0-63-EnZ" secondAttribute="trailing" constant="10" id="Oby-pW-zhb"/>
                         <constraint firstItem="912-is-wPn" firstAttribute="centerY" secondItem="Ts6-5x-Szb" secondAttribute="centerY" id="PJP-In-TF7"/>
-                        <constraint firstItem="Ym0-63-EnZ" firstAttribute="centerY" secondItem="Ts6-5x-Szb" secondAttribute="centerY" id="XZR-bt-5bj"/>
                         <constraint firstAttribute="height" constant="36" id="rJ5-Em-9tB"/>
                         <constraint firstItem="912-is-wPn" firstAttribute="leading" secondItem="Ts6-5x-Szb" secondAttribute="leading" constant="10" id="tbX-JC-cpU"/>
                     </constraints>
@@ -53,7 +41,7 @@
                                 <constraint firstAttribute="height" constant="1" id="Lsb-AC-dnd"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="赌尊" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRa-GW-Nix">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="赌尊" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRa-GW-Nix" customClass="VIPRankGradientTxtLabel">
                             <rect key="frame" x="10" y="12" width="29" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.96078431372549022" green="0.71372549019607845" blue="0.094117647058823528" alpha="1" colorSpace="calibratedRGB"/>
@@ -174,6 +162,16 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="dewdropBoard" destination="M6b-0k-nsZ" id="pfo-TH-Wul"/>
+                <outlet property="heNum" destination="oVH-Pw-vnp" id="Ozv-Ia-K67"/>
+                <outlet property="nameLbl" destination="zsU-Ji-owJ" id="ZZj-Sr-gAe"/>
+                <outlet property="profitCucLbl" destination="t2g-Yn-kv8" id="myQ-HT-shr"/>
+                <outlet property="rankLbl" destination="fRa-GW-Nix" id="C6M-dB-PCh"/>
+                <outlet property="tableCodeLbl" destination="912-is-wPn" id="aeP-5b-6iV"/>
+                <outlet property="totalNum" destination="5GX-RA-cUS" id="y6O-Fg-G3Q"/>
+                <outlet property="xianNum" destination="0ts-z4-sMe" id="eGV-2X-G0y"/>
+                <outlet property="xianduiNum" destination="Uug-LQ-z7W" id="wE3-UV-A6v"/>
+                <outlet property="zhuangNum" destination="A5m-Kc-Tts" id="bB4-sD-yYR"/>
+                <outlet property="zhuangduiNum" destination="WeO-3t-Ruc" id="vBg-XD-9ae"/>
             </connections>
             <point key="canvasLocation" x="370" y="253"/>
         </view>
